# resource-recommender

./: README.md  pyproject.toml
data/raw/: sample_meeting.tsv
src/resource_recommender/: __init__.py  ami_parser.py  cli.py  data_models.py  pipeline.py  preprocess.py  recommender.py
